# hiresify

./: COPYRIGHT  README.md  ci.py
client/: .env  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
client/src/: App.tsx  Root.tsx  const.ts  json-schema.ts  routes.ts  util.ts
client/src/api/: type.ts  util.ts
client/src/app/: rootReducer.ts
client/src/component/: Background.tsx  DragDropBox.tsx  FileProfile.tsx  LogoutButton.tsx  RegisterLink.tsx
client/src/component/__tests__/: BackButton.test.tsx  LogoutButton.test.tsx
client/src/composite/: InTransitFile.tsx
client/src/feature/blob/: slice.ts
client/src/testing/: blob.ts
client/src/tool/: pkce.ts
client/src/upload/: queue.ts
client/src/upload/__tests__/: queue.test.ts
client/src/view/: AuthorizeCallback.tsx  Home.tsx  LoginCallback.tsx  Main.tsx  RegisterCallback.tsx  RequireAuthorized.tsx
client/src/view/__tests__/: AuthorizeCallback.test.tsx  RegisterCallback.test.tsx  RequireAuthorized.test.tsx
compute/: .gitignore  pyproject.toml
deploy/: cloud_init.yaml  manifest.yaml  minio.yaml  postgresql.yaml  redis.yaml
deploy/client/: Chart.yaml  values.yaml
deploy/client/templates/: deployment.yaml  service.yaml
deploy/engine/: Chart.yaml  values.yaml
deploy/engine/templates/: NOTES.txt  deployment.yaml  hpa.yaml  service.yaml
engine/: README.md  main.py  pyproject.toml
engine/ci/: __main__.py  const.py
engine/ci/configs/: db.json
engine/db/: models.py
engine/docker/: .dockerignore  .env.development  Dockerfile  compose.dev.yml  compose.test.yml  compose.yml
engine/src/hiresify_engine/: config.py  const.py  envvar.py  model.py  type.py  util.py
engine/src/hiresify_engine/app/: config.py  dependency.py  lifespan.py  main.py  middleware.py  router.py  schema.py  util.py
engine/src/hiresify_engine/app/tests/: conftest.py  test_main.py  test_token.py  test_user.py  util.py
engine/src/hiresify_engine/blob/: model.py  service.py  type.py
engine/src/hiresify_engine/blob/tests/: conftest.py  test_service.py
engine/src/hiresify_engine/cache/: model.py  service.py
engine/src/hiresify_engine/compute/: __main__.py  callback.py  worker.py
engine/src/hiresify_engine/db/: exception.py  mapper.py  model.py  models.py  repository.py  type.py  util.py
engine/src/hiresify_engine/db/tests/: conftest.py  test_repository.py
engine/src/hiresify_engine/dep/: __init__.py  getter.py  type.py
engine/src/hiresify_engine/jwt/: const.py  model.py  service.py
engine/src/hiresify_engine/jwt/tests/: conftest.py  test_service.py
engine/src/hiresify_engine/model/: __init__.py  blob.py  config.py  job.py  session.py  token.py  upload.py  user.py
engine/src/hiresify_engine/router/: __init__.py  blob.py  const.py  dependency.py  job.py  model.py  schema.py  token.py  user.py  util.py
engine/src/hiresify_engine/router/tests/: conftest.py  test_blob.py  test_token.py  test_user.py
engine/src/hiresify_engine/service/: __init__.py  blob.py  broker.py  cache.py  queue.py
engine/src/hiresify_engine/service/tests/: conftest.py  test_blob.py
engine/src/hiresify_engine/static/: style.css  verify.js
engine/src/hiresify_engine/templates/: __init__.py  login.html  path.py  register.html
engine/src/hiresify_engine/testing/: __init__.py  blob.py  cache.py  cch.py  data.py  db.py
engine/src/hiresify_engine/tool/: __init__.py  cch.py  jwt.py  pkce.py  pwd.py
hiresify/: .env  .env.development  Chart.yaml  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  values.yaml  vite.config.ts  vitest.setup.ts
hiresify/src/: App.tsx  Root.tsx  backend-type.ts  const.ts  json-schema.ts  main.tsx  type.ts  urls.ts  util.ts  vite-env.d.ts
hiresify/src/api/: blob.ts  type.ts  util.ts
hiresify/src/api/__tests__/: api.test.ts
hiresify/src/app/: createAppSlice.ts  hooks.ts  rootReducer.ts  store.ts
hiresify/src/component/: AuthTab.tsx  BackButton.tsx  Callback.tsx  FileProfile.tsx  LoginButton.tsx  LogoutButton.tsx  ProgressBar.tsx  RegisterLink.tsx
hiresify/src/component/__tests__/: BackButton.test.tsx  LoginButton.test.tsx  LogoutButton.test.tsx  RegisterLink.test.tsx
hiresify/src/components/: Home.tsx  Login.tsx
hiresify/src/composite/: FileController.tsx  InTransitFile.tsx  PersistedFile.tsx
hiresify/src/feature/blob/: slice.ts  thunk.ts
hiresify/src/testing/: blob.ts  server.ts
hiresify/src/tool/: pkce.ts  url.ts
hiresify/src/upload/: api.ts  hook.ts  provider.tsx  queue.ts  store.ts  type.ts  worker.ts
hiresify/src/upload/__tests__/: api.test.ts  hook.test.tsx  queue.test.ts  store.test.ts
hiresify/src/view/: Auth.tsx  AuthorizeCallback.tsx  Callback.tsx  Home.tsx  LoginCallback.tsx  Main.tsx  RegisterCallback.tsx  RequireAuthorized.tsx
hiresify/src/view/__tests__/: AuthorizeCallback.test.tsx  Callback.test.tsx  LoginCallback.test.tsx  Main.test.tsx  RegisterCallback.test.tsx
hiresify/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml
hiresify/templates/tests/: test-connection.yaml
