[project]
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[all]>=0.115.12",
    "mypy>=1.16.0",
    "passlib[bcrypt]>=1.7.4",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.13",
    "sqlalchemy>=2.0.41",
]
description = "Add your description here"
name = "engine"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
exclude = [
    "__pycache__",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
]
fix = true
lint.ignore = [
  "PLR0913",  # too many arguments in function definition
  "PLR2004",  # magic value comparison
]
lint.select = [
  "B",       # flake8-bugbear
  "C90",     # mccabe (complexity)
  "COM812",  # trailing comma
  "D",       # pycodestyle docstring
  "E",       # pycodestyle error
  "F",       # pyflakes
  "I",       # isort
  "N",       # pep8-naming
  "PL",      # pylint rules
  "RUF",     # ruff-specific rules (includes black-style formatting)
  "RUF100",  # black-style formatting, incl. line-length
  "UP",      # pyupgrade
  "YTT",     # flake8-2020
]
line-length = 88
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D"]
"**/tests/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
