[build-system]
requires = ["setuptools >= 68"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "aioboto3>=15.0.0",
    "aiosqlite>=0.21.0",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.115.12",
    "pydantic-settings>=2.9.1",
    "python-jose[cryptography]>=3.5.0",
    "python-magic>=0.4.27",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "types-aioboto3[s3]>=15.0.0",
]
description = "Hiresify Engine"
name = "engine"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[project.optional-dependencies]
dev = [
    "asgi-lifespan>=2.1.0",
    "httpx>=0.28.1",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-env>=1.1.5",
    "ruff>=0.11.13",
]

[tool.mypy]
exclude = ["build"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v"
asyncio_mode = "auto"
testpaths = ["tests"]
env = [
    "BLOB_STORE_URL=http://localhost:9000",
    "BLOB_ACCESS_KEY=user",
    "BLOB_SECRET_KEY=12345678",
    "BLOB_STORE_REGION=us-east-1",
]

[tool.ruff]
exclude = [
    "__pycache__",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
]
fix = true
lint.ignore = [
  "PLR0913",  # too many arguments in function definition
  "PLR2004",  # magic value comparison
]
lint.select = [
    "B",       # flake8-bugbear
    "C90",     # mccabe (complexity)
    "COM812",  # trailing comma
    "D",       # pycodestyle docstring
    "E",       # pycodestyle error
    "F",       # pyflakes
    "I",       # isort
    "N",       # pep8-naming
    "PL",      # pylint rules
    "RUF",     # ruff-specific rules (includes black-style formatting)
    "RUF100",  # black-style formatting, incl. line-length
    "UP",      # pyupgrade
    "YTT",     # flake8-2020
]
line-length = 88
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"ci/**/*.py" = ["D"]
"__init__.py" = ["D"]
"**/tests/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"hiresify_engine" = [
    "static/*.css",
    "static/*.js",
    "static/*.svg",
    "templates/*.html",
]
